@@ -146,6 +146,7 @@ t/063LoggerRemove.t
 t/064RealClass.t
 t/065Undef.t
 t/066SQLite.t
+t/067Exception.t
 t/compare.pl
 t/deeper1.expected
 t/deeper6.expected
